Added bank methods to download transactions

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
 		<script type="text/javascript" src={{ url_for('static',filename='js/jquery-1.7.1.js') }}></script>
 		<script type="text/javascript" src="{{ url_for('static',filename='js/jquery-require.js') }}"></script>
 		<script type="text/javascript" src="static/js/json2.js"></script>
+		<script type="text/javascript" src="static/js/taffy.js"></script>
 		<script type="text/javascript" src="static/js/bootstrap/bootstrap-tabs.js"></script>
 		<script type="text/javascript" src="static/js/ui.js"></script>
 		<script type="text/javascript" src="static/js/app.js"></script>
