XFER BL implemented, lot of refactoring reqd

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="static/css/bootstrap.css"></link>
+		<link rel="stylesheet" href="static/css/jquery-ui-1.8.16.custom.css"></link>
 		<style>
 			body {
 				padding-top : 40px
@@ -40,6 +41,8 @@
 		<script type="text/javascript" src="{{ url_for('static',filename='js/jquery-require.js') }}"></script>
 		<script type="text/javascript" src="static/js/json2.js"></script>
 		<script type="text/javascript" src="static/js/jquery.dataTables.js"></script>
+		<script type="text/javascript" src="static/js/jquery.jeditable.js"></script>
+		<script type="text/javascript" src="static/js/jquery-ui-1.8.16.custom.min.js"></script>
 		<script type="text/javascript" src="static/js/taffy.js"></script>
 		<script type="text/javascript" src="static/js/datatables.bootstrap.js"></script>
 		<script type="text/javascript" src="static/js/bootstrap/bootstrap-tabs.js"></script>
